[project]
name = "finalproject_Elskas_M25_555"
version = "0.1.0"
description = "ValueTradeHub final project"
authors = [
    {name = "fenrirg6",email = "rbhbk2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prettytable>=3.16.0,<4.0.0",
    "pip>=25.3,<26.0",
    "prompt>=0.4.1,<0.5.0",
    "requests (>=2.32.5,<3.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "valutatrade_hub"}
]

[tool.poetry.scripts]
valutatrade = "valutatrade_hub.cli.interface:run_interactive"
valutatrade-cli = "valutatrade_hub.cli.interface:run"
valutatrade-repl = "valutatrade_hub.cli.interface:run_interactive"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)"
]
